--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
@@ -285,9 +285,9 @@
                                             }
                                             <font class="@styleColor">@Html.DisplayFor(o => o.Heat_Main.Heat)</font>
                                         </td>
-                                        <td><h5>Last Inspeciton Date</h5></td>
+                                        <td><h5>N/A</h5></td>
                                         <td>
-                                            @Html.ValueFor(o => o.Heat_Main.HeatDate, "{0:yyyy/MM/dd}")
+                                            @Html.CheckBox("Heat_Main.NonHeat", Convert.ToBoolean(Model.Heat_Main.NonHeat), new { @disabled = "disabled" })
                                         </td>
                                     </tr>
                                     <tr>
@@ -295,13 +295,13 @@
                                         <td>
                                             @Html.DisplayFor(o => o.Heat_Main.StyleID)
                                         </td>
-                                        <td><h5>SCI Refno</h5></td>
+                                        <td><h5>Report Date</h5></td>
                                         <td>
-                                            @Html.DisplayFor(o => o.Heat_Main.SCIRefno)
+                                            @Html.ValueFor(o => o.Heat_Main.HeatDate, "{0:yyyy/MM/dd}")
                                         </td>
                                         <td><h5>Heat Inspector</h5></td>
                                         <td>
-                                            @Html.DisplayFor(o => o.Heat_Main.Name)
+                                            @Html.DisplayFor(o => o.Heat_Main.HeatInspector)
                                         </td>
                                     </tr>
                                     <tr>
@@ -309,13 +309,28 @@
                                         <td>
                                             @Html.DisplayFor(o => o.Heat_Main.BrandID)
                                         </td>
+                                        <td><h5>Receive Date</h5></td>
+                                        <td>
+                                            @Html.TextBoxFor(modelItem => Model.Heat_Main.HeatReceiveDate, "{0:yyyy/MM/dd}", new { @class = "date-picker" })
+                                        </td>
+                                        <td><h5>Approver</h5></td>
+                                        <td>
+                                            @Html.TextBoxFor(modelItem => Model.Heat_Main.HeatApprover, new { @style = "width:30%", @class = "inputHeatApprover", @disabled = "disabled" })
+                                            @Html.TextBoxFor(modelItem => Model.Heat_Main.HeatApproverName, new { @style = "width:57%", @disabled = "disabled" })
+                                            <input id="btnHeatApproverSelectItem" type="button" class="site-btn btn-blue btnHeatApproverSelectItem" style="margin:0;border:0;" value="..." />
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td><h5>SCI Refno</h5></td>
+                                        <td>
+                                            @Html.DisplayFor(o => o.Heat_Main.SCIRefno)
+                                        </td>
                                         <td><h5>Brand Refno</h5></td>
                                         <td>
                                             @Html.DisplayFor(o => o.Heat_Main.Refno)
                                         </td>
-                                        <td><h5>N/A</h5></td>
+                                        <td><h5></h5></td>
                                         <td>
-                                            @Html.CheckBox("Heat_Main.NonHeat", Convert.ToBoolean(Model.Heat_Main.NonHeat), new { @disabled = "disabled" })
                                         </td>
                                     </tr>
                                     <tr>
@@ -493,14 +508,14 @@
 
             $('#Save, #New').addClass("IsEditMode");
             $(".DataTable:not(.DetailTable) textarea").removeAttr("disabled", "disabled");
-            $(".DetailTable input,.DetailTable select, #Heat_Main_HeatRemark").removeAttr("disabled", "disabled");
+            $(".DetailTable input,.DetailTable select, #Heat_Main_HeatRemark ,.inputHeatApprover ,#Heat_Main_HeatReceiveDate").removeAttr("disabled", "disabled");
             $(".detailDelete").show();
             DetailButtonBind();
         }
         else {
             $('#Save, #New').unbind('click').removeClass("IsEditMode");
             $(".DataTable:not(.DetailTable) textarea").attr("disabled", "disabled");
-            $(".DetailTable input,.DetailTable select, #Heat_Main_HeatRemark").attr("disabled", "disabled");
+            $(".DetailTable input,.DetailTable select, #Heat_Main_HeatRemark ,.inputHeatApprover ,#Heat_Main_HeatReceiveDate").attr("disabled", "disabled");
             $(".detailDelete").hide();
             $('#Excel, #PDF ,#SendMail').addClass("IsEditMode");
 
@@ -926,6 +941,45 @@
             window.open('@Url.Action("Pass1List", "PublicWindow",new{Area=""})' + para, 'Roll', config = 'toolbar=no,status=no,location=no,width=950,height=650');
         });
 
+
+        $('.inputHeatApprover').unbind('blur').on('blur', function () {
+            var targetID = $(this).closest('tr').attr('idx');
+
+            if ($(this).val() == "") {
+                $("#Heat_Main_HeatApprover").val('');
+                $("#Heat_Main_HeatApproverName").val('');
+                return;
+            }
+
+            $.ajax({
+                url: "@Url.Action("Pass1List", "PublicWindow",new { Area=""})",
+                type: 'POST',
+                contentType: "application/json; charset=utf-8",
+                data: JSON.stringify({ ID: $(this).val(), ReturnType: "JSON" }),
+                async: true,
+                success: function (data) {
+                    if (data.length == 0) {
+                        $("#Heat_Main_HeatApprover").val('');
+                        $("#Heat_Main_HeatApproverName").val('');
+                        msg.WithError('Approver Not Found');
+                    }
+                    else {
+                        $("#Heat_Main_HeatApprover").val(data[0].ID);
+                        $("#CrockHeat_Main_HeatApproverName").val(data[0].Name);
+                    }
+                },
+                error: function (xhr, ajaxOptions, thrownError) {
+                    console.log(xhr.responseText);
+                }
+            });
+        });
+
+        $('.btnHeatApproverSelectItem').unbind('click').on('click', function () {
+            var targetID ='Heat_Main_HeatApprover';
+            var para = "?TargetID=" + targetID;
+            window.open('@Url.Action("Pass1List", "PublicWindow",new{Area=""})' + para, 'Roll', config = 'toolbar=no,status=no,location=no,width=950,height=650');
+        });
+
         $('.detailDelete').unbind('click').on('click', function () {
             var t = $(this).closest('tr');
 
@@ -986,8 +1040,14 @@
     }
 
     function GetPass1(data, targetID) {
-        $("#Heat_Detail_" + targetID + "__Inspector").val(data.ID);
-        $("#Heat_Detail_" + targetID + "__Name").val(data.Name + ' Ext.' + data.ExtNo);
+        if (targetID.includes('Main')) {
+            $(`#${targetID}`).val(data.ID);
+            $(`#${targetID}Name`).val(data.Name);
+        }
+        else {
+            $("#Heat_Detail_" + targetID + "__Inspector").val(data.ID);
+            $("#Heat_Detail_" + targetID + "__Name").val(data.Name + ' Ext.' + data.ExtNo);
+        }
     }
 
     function GetPicture(data) {
