[ISP20241019]調整版面及EXCEL/PDF設計

--- a/Quality/Quality/Areas/BulkFGT/Views/FabricOvenTest/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricOvenTest/Detail.cshtml
@@ -287,7 +287,7 @@
                                     <td ><h5>Report Date</h5></td>
 
                                     <td >
-                                        @Html.TextBoxFor(o => Model.Main.ReportDate, "{0:yyyy/MM/dd}", new { @class = "date-picker" })
+                                        @Html.TextBoxFor(o => Model.Main.ReportDate, "{0:yyyy/MM/dd}", new { @readonly = "readonly" })
                                     </td>
 
                                 </tr>
