--- a/Quality/Quality/Areas/BulkFGT/Views/AgingHydrolysisTest/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AgingHydrolysisTest/Detail.cshtml
@@ -809,7 +809,7 @@
         $("#Excel").on("click", function () {
 
             msg.WithInfoTimer("Report Generating...");
-
+            debugger;
             $.ajax({
                 url: "@Url.Action("ToExcel")",
                 type: 'POST',
