--- a/Quality/Quality/Views/PublicWindow/TestFailMailList.cshtml
+++ b/Quality/Quality/Views/PublicWindow/TestFailMailList.cshtml
@@ -125,4 +125,7 @@
 
     });
 
+    window.addEventListener('beforeunload', function (event) {
+        window.opener.location.reload();
+    });
 </script>
