ISP20241260 - 調整父層畫面重整邏輯

--- a/Quality/Quality/Views/SendMailAttachfiles/SendMailer.cshtml
+++ b/Quality/Quality/Views/SendMailAttachfiles/SendMailer.cshtml
@@ -15,7 +15,7 @@
 <script src="~/ThirdParty/CustomScripts/Message-1.0.0.js"></script>
 <script src="~/ThirdParty/CustomScripts/basic.js"></script>
 <script src="~/ThirdParty/SciCustom/js/jquery-ui.min.js"></script>
-<script src="~/ThirdParty/SciCustom/js/main.js"></script>
+@*<script src="~/ThirdParty/SciCustom/js/main.js"></script>*@
 
 <style>
     .DataTable {
